# epc-cli

./: .gitignore  Justfile  README.md  epc_ew.py  mypy.ini  pyproject.toml  pyrightconfig.json  run_epc_ew.py
epc-ew-cli/: README.md  pyproject.toml
epc-ew-cli/src/epc_ew_cli/: __init__.py  __main__.py  main.py
flask-epc-app/: README.md  app.py
flask-epc-app/templates/: index.html
src/epc_ew/: __init__.py  cli.py  consumer.py
tests/: test_library_api.py
