[project]
name = "epc-ew"
version = "0.1.0"
description = "EPC consumer for England & Wales (UPRN-driven)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "duckdb>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epc_ew"]

[tool.uv.workspace]
members = ["epc-ew-cli"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "epc-ew-cli",
    "pytest>=8.0.0",
]

[tool.uv.sources]
epc-ew-cli = { workspace = true }

[tool.uv]
default-groups = ["dev"]
